Fixed alerts z-index

--- a/core-client/scss/components/alert.scss
+++ b/core-client/scss/components/alert.scss
@@ -28,7 +28,7 @@
 	top: 55px;
 	right: 10px;
 	width: 350px;
-	z-index: 2;
+	z-index: 100;
 
 	> ul {
 		margin: 0;
