--- a/core-client/scss/pages/error.scss
+++ b/core-client/scss/pages/error.scss
@@ -2,9 +2,9 @@
 body {
 	display: flex;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100vw;
-	padding: 0;
+	padding: 25px 0;
 	margin: 0;
 	color: #FFF;
 
@@ -14,6 +14,10 @@ body {
 
 	&.is-forbidden {
 		background-color: darken(mc('blue-grey', '900'), 5%);
+	}
+
+	&.is-error {
+		background-color: darken(mc('blue-grey', '900'), 10%);
 	}
 
 }
@@ -31,6 +35,18 @@ body {
 
 	a.button {
 		margin: 0 5px;
+	}
+
+	h3 {
+		text-align: left;
+		margin-top: 50px;
+	}
+
+	pre {
+		margin-top: 10px;
+		text-align: left;
+		color: mc('blue-grey', '200');
+		font-size: 12px;
 	}
 
 }
